<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/viewID"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketVaultTitle"
        android:id="@+id/textView1"
        android:textSize="40sp"
        android:layout_alignEnd="@+id/btnCost"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:id="@+id/btnCost"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:layout_above="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:contentDescription="@string/concertPicture" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTickets"
        android:inputType="number"
        android:numeric="integer"
        android:textSize="25sp"
        android:hint="@string/nmbTicketHint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false"
        android:layout_marginTop="82dp"
        android:layout_alignParentBottom="false" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Groups"
        android:entries="@array/Groups"
        android:prompt="@string/Title"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/btnCost"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:textSize="20sp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/imageConcert"
        android:src="@drawable/concert"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/txtResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY" />
</RelativeLayout>
